--- a/src/main/webapp/WEB-INF/i18n/messages.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages.properties
@@ -5,3 +5,6 @@ signup.success=Congratulations {0}! You have successfully signed up.
 notBlank.message = The value may not be empty!
 email.message = The value must be a valid email!
 email-exists.message = The email is already taken!
+
+#Mission messages
+mission.delete = Mission supprimée avec succès
